--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -9,7 +9,6 @@
     "ng": "ng",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings",
@@ -17,40 +16,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.6",
-    "@angular/compiler": "^2.4.6",
-    "@angular/core": "^2.4.6",
-    "@angular/forms": "^2.4.6",
-    "@angular/http": "^2.4.6",
-    "@angular/platform-browser": "^2.4.6",
-    "@angular/platform-browser-dynamic": "^2.4.6",
-    "@angular/router": "^3.4.6",
+    "@angular/common": "~2.4.6",
+    "@angular/compiler": "~2.4.6",
+    "@angular/core": "~2.4.6",
+
+    "@angular/platform-browser": "~2.4.6",
+    "@angular/platform-browser-dynamic": "~2.4.6",
+
+    "@angular/forms": "~2.4.6",
+    "@angular/http": "~2.4.6",
+    "@angular/router": "~3.4.6",
+    "@angular/upgrade": "~2.4.6",
+
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.9",
-    "requirejs": "^2.3.2",
-    "rxjs": "^5.1.0",
-    "systemjs": "^0.20.5",
-    "ts-helpers": "^1.1.1",
+    "rxjs": "5.1.0",
+    "systemjs": "0.20.5",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.1",
-    "@types/core-js": "^0.9.35",
-    "@types/jasmine": "^2.5.38",
-    "@types/node": "^6.0.62",
-    "angular-cli": "1.0.0-beta.28.3",
-    "codelyzer": "~2.0.0-beta.1",
     "concurrently": "^3.1.0",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "~4.0.13",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
+    "lite-server": "^2.2.2",
     "typescript": "^2.1.5",
     "typings": "^2.1.0"
   },
