--- a/bisca-ui/tsconfig.json
+++ b/bisca-ui/tsconfig.json
@@ -7,13 +7,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false
-  },
-  "include": [
-      "src/**/*"
-  ],
-  "exclude": [
-      "node_modules",
-      "**/*.spec.ts"
-  ]
+    "noImplicitAny": false,
+    "outDir": "dist"
+  }
 }
