--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -19,24 +19,28 @@
     "@angular/common": "~2.4.6",
     "@angular/compiler": "~2.4.6",
     "@angular/core": "~2.4.6",
-
-    "@angular/platform-browser": "~2.4.6",
-    "@angular/platform-browser-dynamic": "~2.4.6",
-
     "@angular/forms": "~2.4.6",
     "@angular/http": "~2.4.6",
+    "@angular/platform-browser": "~2.4.6",
+    "@angular/platform-browser-dynamic": "~2.4.6",
     "@angular/router": "~3.4.6",
     "@angular/upgrade": "~2.4.6",
-
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.9",
-    "rxjs": "5.1.0",
-    "systemjs": "0.20.5",
+    "rxjs": "5.2.0",
+    "systemjs": "0.20.9",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-rc.0",
     "concurrently": "^3.1.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.5.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-remap-istanbul": "^0.6.0",
     "lite-server": "^2.2.2",
+    "ng": "0.0.0-rc6",
     "typescript": "^2.1.5",
     "typings": "^2.1.0"
   },
