--- a/bisca-model/pom.xml
+++ b/bisca-model/pom.xml
@@ -5,20 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>steelzack</groupId>
+        <groupId>jofisae</groupId>
         <artifactId>bisca-je</artifactId>
-        <version>[0.0.0,99.0.0)</version>
+        <version>1.0.0</version>
     </parent>
 
-    <groupId>steelzack</groupId>
     <artifactId>bisca-model</artifactId>
     <version>${project.parent.version}</version>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler>3.5.1</maven.compiler>
-        <java.version>1.8</java.version>
     </properties>
 
     <build>
