--- a/bisca-rest-api/pom.xml
+++ b/bisca-rest-api/pom.xml
@@ -3,12 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>steelzack</groupId>
+        <groupId>jofisaes</groupId>
         <artifactId>bisca-je</artifactId>
-        <version>[0.0.0,99.0.0)</version>
+        <version>1.0.0</version>
     </parent>
 
-    <groupId>steelzack</groupId>
     <artifactId>bisca-rest-api</artifactId>
     <packaging>war</packaging>
     <name>bisca-rest-api</name>
