--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>steelzack</groupId>
-    <artifactId>bisca-je</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>bisca-je</name>
+
+    <groupId>jofiaes</groupId>
+    <artifactId>bisca-je</artifactId>
+    <version>1.0.0</version>
+
+    <name>O jogo da bisca</name>
     <url>http://maven.apache.org</url>
 
     <modules>
@@ -15,8 +17,8 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>10</maven.compiler.source>
+        <maven.compiler.target>10</maven.compiler.target>
         <maven.compiler>3.5.1</maven.compiler>
         <java.version>1.8</java.version>
         <junit>4.12</junit>
