--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -16,32 +16,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.4.6",
-    "@angular/compiler": "~2.4.6",
-    "@angular/core": "~2.4.6",
-    "@angular/forms": "~2.4.6",
-    "@angular/http": "~2.4.6",
-    "@angular/platform-browser": "~2.4.6",
-    "@angular/platform-browser-dynamic": "~2.4.6",
-    "@angular/router": "~3.4.6",
-    "@angular/upgrade": "~2.4.6",
+    "@angular/common": "^7.0.2",
+    "@angular/compiler": "^7.0.2",
+    "@angular/core": "^7.0.2",
+    "@angular/forms": "^7.0.2",
+    "@angular/http": "^7.0.2",
+    "@angular/platform-browser": "^7.0.2",
+    "@angular/platform-browser-dynamic": "^7.0.2",
+    "@angular/router": "^7.0.2",
+    "@angular/upgrade": "~7.0.2",
     "core-js": "^2.4.1",
+    "npm": "^6.4.1",
     "reflect-metadata": "^0.1.9",
-    "rxjs": "5.2.0",
-    "systemjs": "0.20.9",
-    "zone.js": "^0.7.6"
+    "rxjs": "6.3.3",
+    "systemjs": "2.1.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.0",
-    "concurrently": "^3.1.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.5.0",
+    "@angular/cli": "^7.0.4",
+    "concurrently": "^4.0.1",
+    "jasmine-core": "^3.3.0",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.6.0",
     "lite-server": "^2.2.2",
-    "ng": "0.0.0-rc6",
-    "typescript": "^2.1.5",
+    "ng": "0.0.0",
+    "typescript": "^3.1.6",
     "typings": "^2.1.0"
   },
   "description": "This project was generated with [angular-cli](https://github.com/angular/angular-cli) version 1.0.0-beta.28.3.",
